# PHAROS

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/: launch.json
.claude/commands/: verify.md
docs/: PROGRESS.md
eval/: __init__.py  __main__.py  report.py  runner.py  stats.py
hud/: __init__.py  core.py  server.py
hud/frontend/: index.html  package-lock.json  package.json
hud/frontend/src/: App.tsx  api.ts  main.tsx  types.ts
hud/frontend/src/components/: Controls.tsx  EventFeed.tsx  MetricsPanel.tsx  PriorityList.tsx  SceneView.tsx  TeamMap.tsx
hud/frontend/src/hooks/: useTeamWS.ts
sim/: __init__.py  core.py  team.py
src/pharos/cogload/: __init__.py  core.py
src/pharos/comms/: __init__.py  core.py
src/pharos/entropy/: __init__.py  core.py
src/pharos/io/: __init__.py  core.py
src/pharos/pipeline/: __init__.py  core.py
src/pharos/priority/: __init__.py  core.py
src/pharos/sensing/: __init__.py  core.py
tests/: test_cogload.py  test_comms.py  test_entropy.py  test_eval.py  test_hud.py  test_pipeline.py  test_placeholder.py  test_priority.py  test_sensing.py  test_sim.py  test_team_sim.py  test_ws.py
