[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pharos"
version = "0.1.0"
description = "PHAROS: Priority·Hazard·Attention·Reorganizing·Overload·Suppression — firefighter cognitive load and hazard prioritization prototype"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.2",
    "pre-commit>=3.7",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pharos"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src:."
packages = ["pharos", "sim", "hud"]
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
